--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2022.12.7
 crispy-bootstrap5==0.7
 Django==4.1.7
 django-crispy-forms==2.0
+gunicorn==20.1.0
 pip==23.0.1
 setuptools==65.6.3
 sqlparse==0.4.3
